2.0.1 / ai / unslop-loop iter-1/9 : remove duplicate import, simplify bool expr, fix wildcard imports, SequencedCollection getFirst(), comparator chain, RFC 9457 javadoc